REST: Replace invalid-edit-tag with invalid-value
Bug: T369028
